--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import 'Tree.scss'
+
 .App {
   text-align: center;
 }
@@ -5,6 +7,21 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #235E6F;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -25,7 +42,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #61DAFB;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +52,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container-content {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.navbar {
+    margin-top: 20px;
+    padding-top: 15px;
+    padding-left: 15px;
+    color: #fff;
+    width: 100%;
+    background: linear-gradient(0, rgba(52, 166, 95, 0.9) 0%, rgba(15, 138, 95, 0.9) 100%);
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
