--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #235E6F;
+  background-color: #fff;
 }
 
 code {
@@ -28,48 +28,31 @@ code {
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61DAFB;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tree-btn {
+ width: 40px;
+ height: 40px;
+ cursor: pointer;
 }
 
-.container-content {
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.navbar {
-    margin-top: 20px;
-    padding-top: 15px;
-    padding-left: 15px;
-    color: #fff;
+.kiwi-color-top {
+    background-color: rgb(0, 169, 145);
+    height: 15px;
     width: 100%;
-    background: linear-gradient(0, rgba(52, 166, 95, 0.9) 0%, rgba(15, 138, 95, 0.9) 100%);
 }
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+.bg {
+    z-index: -1;
+    background-color: white;
+    opacity: 50%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 100%;
+    right: 100%;
+    width: 100%;
+    height: 100%;
 }
