--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -18,7 +18,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -29,30 +29,30 @@ code {
 }
 
 .App-link {
-  color: #61DAFB;
+  color: #61dafb;
 }
 
 .tree-btn {
- width: 40px;
- height: 40px;
- cursor: pointer;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
 }
 
 .kiwi-color-top {
-    background-color: rgb(0, 169, 145);
-    height: 15px;
-    width: 100%;
+  background-color: rgb(0, 169, 145);
+  height: 15px;
+  width: 100%;
 }
 
 .bg {
-    z-index: -1;
-    background-color: white;
-    opacity: 50%;
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 100%;
-    right: 100%;
-    width: 100%;
-    height: 100%;
+  z-index: -1;
+  background-color: white;
+  opacity: 50%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 100%;
+  right: 100%;
+  width: 100%;
+  height: 100%;
 }
