--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,15 @@ code {
   width: 100%;
   height: 100%;
 }
+
+.cube {
+  background-size: cover;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.cube:hover {
+  opacity: 0.7;
+}
