--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,10 @@ code {
 .cube:hover {
   opacity: 0.7;
 }
+
+.offer-block {
+  border-radius: 15px;
+  padding: 10px;
+  box-shadow: 2px 3px 3px 3px #888888;
+  background: rgba(255, 255, 255, 0.8);
+}
