--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@ code {
     display: none;
     position: absolute;
     top: 100px;
+    z-index: 10000;
     left: 0;
     margin: 0;
     width: 200px;
